fix button's width on firefox & ie

--- a/css/index.css
+++ b/css/index.css
@@ -99,10 +99,9 @@ a {
 }
 
 .button {
-    display:block;
+    display:inline-block;
     border: 1.5px solid black;
     background-color:transparent;
-    width:fit-content;
     padding:2px 20px;
     border-radius:30px;
     font-size:15px;
